--- a/src/USZDashboard/appsettings.json
+++ b/src/USZDashboard/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VM-LAB90383;Database=aspnet-USZDashboard;User Id=SRV_USZ_Dashboard;password=asd123+;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=VM-LAB90383;Database=aspnet-USZDashboard;User Id=SRV_USZ_Dashboard;password=asd123+;MultipleActiveResultSets=true",
+    "HomeConnection": "Server=HJUAN-LIN\\HUAN_LIN_2016;Database=aspnet-USZDashboard;User Id=SRV_USZ_Dashboard;password=asd123+;MultipleActiveResultSets=true",
+    
     //"DashboardDB": "Server=VM-LAB90383;Database=DashboardAdmin;User Id=SRV_USZ_Dashboard;password=asd123+;MultipleActiveResultSets=True;"
   },
   "Logging": {
